<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" 
        android:background="@color/Question_Title_background">

       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/show_username"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:text="@string/baiduMap_username"
                android:textSize="20sp"
                android:textColor="@color/BaiduMap_username_color"
                />
            
            <TextView 
                android:id="@+id/show_baiduMap_showmyquestion"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/baiduMap_showmyquestion"
                android:layout_gravity="right|center"
                android:textSize="20sp"
                android:textColor="@color/code_color"
                />

        </LinearLayout>
        
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
           <EditText 
               android:id="@+id/baidumap_search_city"
               android:layout_width="0dp"
               android:layout_height="match_parent"
               android:layout_weight="2"
               android:hint="@string/baiduMap_searchcityhint"
               android:singleLine="true"
               />

            <EditText 
                android:id="@+id/baiduMap_search_EditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:hint="@string/baiduMap_searchhint"
                android:singleLine="true"
                />
			
            <Button
                android:id="@+id/baiduMap_search_Button"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/baiduMap_searchButton"
                android:background="@color/code_back"
                android:textColor="@color/Question_Title_background"
                />
            
        </LinearLayout>

        <TextView
            android:id="@+id/show_user_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical" >

        <com.baidu.mapapi.map.MapView
            android:id="@+id/map"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:clickable="true" />
    </LinearLayout>

</LinearLayout>